# primordial

./: .gitignore  CMakeLists.txt  README  README.md  TODO  TODO_temp  TODO~
art/: .gitignore
art/models_blender/: mdl_human_male.blend  mdl_human_male.blend1  mdl_human_male.blend2  mdl_human_male_anim_rdy.blend
art/models_blender/uv_sphere/: mdl_uv_sphere.blend  mdl_uv_sphere.blend1  mdl_uv_sphere.blend2
prog/engine/: .gitignore  .gitignore.swp  BACK_TO_LINUX_WORKFLOW.txt  ValgrindOut.xml  cachegrind.out.3389  code_structure  code_structure~  debughelper.txt  main.cpp  primordial.cbp  primordial.depend  primordial.layout
prog/engine/assets/models/: bush.bgeo  grass_flat1.bgeo  grass_spring.bgeo  grass_star1.bgeo  grass_tri1.bgeo  grassing1.bgeo  humale.bgeo1  humale.bgeo12  human_all_anim2.bgeo12  human_all_anim3.bgeo  human_all_anim3.bgeo1  human_all_anim3.bgeoX  rabbit.bgeo  rock01.bgeo  spruce.bgeo  spruce_bb.bgeo  spruce_wbranch.bgeo  sword.bgeo  sword_03.bgeo  terrain.bgeo
prog/engine/assets/models_bkp/: axes.bgeo  cube.bgeo  humale_idle.bgeo2  human_all_anim.bgeoxX  human_male_bgeo.bgeo  human_male_bgeo.bgeo12  loincloth.bgeo  quad.bgeo  sphere.bgeo
prog/engine/assets/skeletons/: humale.bbns  humale_1hswing.bbns  human_all_anim.bbns  human_all_anim3.bbns
prog/engine/assets/skeletons_bkp/: anim_test.bbns  humale_idle.bbns
prog/engine/assets/sound/: clang.lic  wind-trees.lic
prog/engine/assets_bin/models/: anim_test.bgeo  human_male.bgeo  human_male.bgeo1  human_male.bgeo12  human_male_bgeo.bgeo  human_male_bgeo.bgeo1  human_male_bgeo.bgeo12
prog/engine/assets_bin/skeletons/: anim_test.bbns  human_male_bgeo.bbns
prog/engine/assets_raw/skeletons/: anim_test.bns
prog/engine/dependencies/: chtimevaluearray.hpp  glerrorcodes.cpp  glerrorcodes.h  helperfunctions.hpp  matprint.hpp  memstreamer.hpp  packedlinkedlist.hpp  quadtree.hpp  threadingwrapper.cpp  threadingwrapper.h  threadingwrapper.hpp  threadiobuffers.hpp  timeseries.hpp
prog/engine/include/: actor.h  animatable.h  artificialintelligence.h  backgroundmaster.h  camera.h  charactercontroller.h  closedmap.h  combinationstage.h  creature.h  creaturesignals.h  culler.h  debugdrawer.h  dynamicbody.h  foliage.h  geometry.h  global.h  global_thread_comm.cpp  global_thread_comm.h  graphics.h  grassshader.h  light.h  master.h  mechanics.h  mesh.h  object3d.h  obstacle.h  parser.h  physicsworld.h  postprocstage.h  prop.h  quaternion.h  renderer.h  renderstage.h  resourcemanager.h  rigidbody.h  scene.h  shader.h  shaderbase.h  shadowinstshader.h  shadowmap.h  (+18 more)
prog/engine/shaders/: gaussianblur.glsl  ld_tinst_vert.glsl  light.frag.glsl  light.vert.glsl  pp_comb.frag.glsl  pp_pass2.frag.glsl  pp_ssao.frag.glsl  pp_wave.frag.glsl  pp_wave.vert.glsl  pp_white.frag.glsl  shadow_instsmall_vert.glsl  shadow_map_frag.glsl  shadow_map_vert.glsl  simple_frag.glsl  simple_vert.glsl  sky_frag.glsl  sky_vert.glsl  text_frag.glsl
prog/engine/src/: actor.cpp  animatable.cpp  artificialintelligence.cpp  backgroundmaster.cpp  camera.cpp  charactercontroller.cpp  combinationstage.cpp  creature.cpp  creature.cpp.save-failed  culler.cpp  debugdrawer.cpp  dynamicbody.cpp  foliage.cpp  geometry.cpp  global.cpp  grassshader.cpp  light.cpp  master.cpp  mechanics.cpp  mesh.cpp  object3d.cpp  obstacle.cpp  parser.cpp  physicsworld.cpp  physicsworld.cpp.save-failed  postprocstage.cpp  prop.cpp  quaternion.cpp  renderer.cpp  renderstage.cpp  resourcemanager.cpp  rigidbody.cpp  scene.cpp  shader.cpp  shaderbase.cpp  shadowinstshader.cpp  shadowmap.cpp  skeleton.cpp  skeleton.cpp.save-failed  skyshader.cpp  (+12 more)
prog/tools/blender_export/: constraintbake.py  export_bones_test.py  export_verts.py  multi_anim_collada.py  workflow.txt
prog/tools/primordial_asset_importer/: animpackbin.hpp  main.cpp  output.txt  primordial_asset_importer.cbp  test_anims.bbns
prog/tools/primordial_asset_importer/all_animations_0/: animconfig
prog/tools/primordial_asset_importer/animations_all_1/: animconfig  animconfig2  export.bat
prog/tools/primordial_asset_importer/animations_all_1/export/: test.bbns  test.bgeo  test.bgeo1
prog/tools/primordial_asset_importer/animations_all_2/: animconfig3  export.bat
prog/tools/primordial_asset_importer/animations_all_2/export/: test.bbns  test.bgeo  test.bgeo1  test.bgeo12  test.bgeo2  test_bad.bbns  test_bad.bgeo
prog/tools/primordial_asset_importer/include/: animpackbin.hpp  converter.hpp  geopackbin.hpp  geopackbin.hpp.save-failed
prog/tools/primordial_asset_importer/include_loc_bkp/: animpackbin.hpp  converter.hpp  geopackbin.hpp
prog/tools/primordial_asset_importer/outputscripts/: exportALL.bat  exportaxes.bat  exportcube.bat  exporthumale.bat  exporthumale1hswing.bat  exporthumaleidle.bat  exportquad.bat  exportrabbit.bat  exportsphere.bat  exportterrain.bat
prog/tools/primordial_asset_importer/plane_test/: simple_plane.bgeo
prog/tools/primordial_asset_importer/sword/: export_sword.bat
prog/tools/primordial_asset_importer/test_scenes/: asset_anim_test2.dae  asset_anim_test4.dae  asset_anim_test5.dae  asset_anim_test6.dae  axes.dae  cube.dae  human_1h_swing_animconf  human_idle_animconf  quad.dae  rabbit.dae  sphere.dae  terrain.dae
prog/tools/primordial_asset_importer/test_scenes/didnt_work_well/: asset_anim_test.blend  asset_anim_test1.dae
prog/trading/: main.cpp  trading.cbp
prog/trading/include/: market.h  route.h  tradegood.h  trader.h  tradeworld.h
prog/trading/src/: market.cpp  route.cpp  tradegood.cpp  trader.cpp  tradeworld.cpp
prog/worldgen/: main.cpp  worldgen.cbp
prog/worldgen/include/: closedmap.hpp  interpolation.hpp  topology.h  watergen.h  world.h
prog/worldgen/src/: topology.cpp  watergen.cpp  world.cpp
